--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,12 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.glide_version = '4.11.0'
+    ext.retrofit_version = '2.7.1'
+    ext.stetho_version = '1.5.1'
+    ext.room_version = '2.2.3'
+    ext.recyclerview_version = '1.1.0'
+
     repositories {
         google()
         jcenter()
