--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     ext.stetho_version = '1.5.1'
     ext.room_version = '2.2.3'
     ext.recyclerview_version = '1.1.0'
+    ext.nav_version = "2.3.0-alpha01"
+    ext.material_design_version = '1.1.0'
 
     repositories {
         google()
@@ -16,6 +18,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
