update search fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,17 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    //Lottie
+    implementation "com.airbnb.android:lottie:$lottie_version"
+
+    // Floating Arc menu
+    implementation "com.ogaclejapan.arclayout:library:$arclayout_version"
+
+    //Circular Image View
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation "com.github.BrotherV:Floating-ArcMenu:1.0.9.2"
+
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
