--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,14 @@ buildscript {
     ext.recyclerview_version = '1.1.0'
     ext.nav_version = "2.3.0-alpha01"
     ext.material_design_version = '1.1.0'
+    ext.lottie_version = '3.3.1'
+    ext.arclayout_version = '1.1.0@aar'
 
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
@@ -28,7 +31,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://jitpack.io' }
     }
 }
 
