--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,13 +66,14 @@ dependencies {
     //Lottie
     implementation "com.airbnb.android:lottie:$lottie_version"
 
-    // Floating Arc menu
-    implementation "com.ogaclejapan.arclayout:library:$arclayout_version"
-
     //Circular Image View
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "de.hdodenhof:circleimageview:$circle_image_view_version"
 
-    implementation "com.github.BrotherV:Floating-ArcMenu:1.0.9.2"
+    // Duo-Navigation Drawer
+    implementation "nl.psdcompany:duo-navigation-drawer:$duo_drawer_version"
+
+    // HalfModalPresenter
+    implementation "com.inandwin.halfmodalpresenter:halfmodalpresenter:$half_modal_version"
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
