--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,10 @@ buildscript {
     ext.nav_version = "2.3.0-alpha01"
     ext.material_design_version = '1.1.0'
     ext.lottie_version = '3.3.1'
-    ext.arclayout_version = '1.1.0@aar'
+    ext.circle_image_view_version = '3.1.0'
+    ext.duo_drawer_version = '3.0.0'
+    ext.half_modal_version = '0.0.4'
+
 
     repositories {
         google()
