--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation "androidx.activity:activity-ktx:1.1.0"
 
     //Glide - image loading library
     implementation "com.github.bumptech.glide:glide:$glide_version"
@@ -49,6 +51,8 @@ dependencies {
 
     //Retrofit - networking library
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     //Stetho - debugging library
     implementation "com.facebook.stetho:stetho:$stetho_version"
@@ -74,15 +78,6 @@ dependencies {
 
     // Duo-Navigation Drawer
     implementation "nl.psdcompany:duo-navigation-drawer:$duo_drawer_version"
-
-    // HalfModalPresenter
-    implementation "com.inandwin.halfmodalpresenter:halfmodalpresenter:$half_modal_version"
-
-    // Music Disc
-//    implementation "com.github.iammert:MusicPlayerView:e3b937c729"
-
-    // Interactive Player
-//    implementation 'com.github.iammert:InteractivePlayerView:f4f6490290'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
