--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     ext.circle_image_view_version = '3.1.0'
     ext.duo_drawer_version = '3.0.0'
     ext.half_modal_version = '0.0.4'
+    ext.gson_version = '2.8.6'
 
 
     repositories {
