--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:largeHeap="true"
         android:name=".Utils.ZealiconApp">
-        <activity android:name=".Activity.PlayerActivity"></activity>
+        <activity android:name=".Activity.PlayerActivity"
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".Activity.SplashScreenActivity"
             android:screenOrientation="portrait">
