--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
+apply plugin: 'com.google.gms.google-services'
+
 def keysFile = rootProject.file("local.properties")
 def keys = new Properties()
 keys.load(new FileInputStream(keysFile))
@@ -51,6 +53,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation "androidx.activity:activity-ktx:1.1.0"
     implementation "androidx.preference:preference-ktx:1.1.0"
+
+    //Firebase
+    implementation "com.google.firebase:firebase-analytics:$firebase_analytics_version"
+    implementation "com.google.firebase:firebase-firestore:$firestore_version"
 
     //Glide - image loading library
     implementation "com.github.bumptech.glide:glide:$glide_version"
