Add Intro Slider

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.0.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.3.1"
 
     //Stetho - debugging library
     implementation "com.facebook.stetho:stetho:$stetho_version"
@@ -95,6 +95,11 @@ dependencies {
 
     // Duo-Navigation Drawer
     implementation "nl.psdcompany:duo-navigation-drawer:$duo_drawer_version"
+
+    // Dots Indicator
+//    implementation "com.tbuonomo.andrui:viewpagerdotsindicator:$dot_indicator_version"
+    implementation "com.github.ronaldsmartin:Material-ViewPagerIndicator:$dot_indicator_version"
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
