--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
     ext.gson_version = '2.8.6'
     ext.firebase_analytics_version = '17.2.3'
     ext.firestore_version = '21.4.1'
+    ext.dot_indicator_version = '1.0.4'
 
 
     repositories {
@@ -25,7 +26,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath 'com.google.gms:google-services:4.3.3'
