--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "tronku.project.zealicon"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
@@ -55,8 +55,7 @@ dependencies {
     implementation "androidx.preference:preference-ktx:1.1.0"
 
     //Firebase
-    implementation "com.google.firebase:firebase-analytics:$firebase_analytics_version"
-    implementation "com.google.firebase:firebase-firestore:$firestore_version"
+    implementation "com.google.firebase:firebase-analytics:17.2.3"
 
     //Glide - image loading library
     implementation "com.github.bumptech.glide:glide:$glide_version"
